components/grafana/configs/home/ingress-grafana.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations:
    tailscale.com/proxy-group: private-ingress
    tailscale.com/tags: tag:k8s-private
    tailscale.com/http-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Grafana"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "grafana.png"
    gethomepage.dev/href: "https://grafana.tail0c49c.ts.net"

spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
